--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "a react chat bot using dialogflow",
   "main": "server.js",
   "engines": {
-    "npm":"6.4.1",
-    "node":"10.15.3"
+    "npm": "6.4.1",
+    "node": "10.15.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dialogflow": "^0.10.3",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1"
   }
 }
