--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "actions-on-google": "^2.12.0",
     "dialogflow": "^0.10.3",
+    "dialogflow-fulfillment": "^0.6.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "mongoose": "^5.6.13",
     "structjson": "^1.0.1"
   }
 }
